spark-connector/3.5/download-links.md
---
title: Download and API Reference
pubDate: 2026-08-22T04:32:17.641Z
antora:
  editUrl: https://github.com/couchbase/docs-spark/edit/release/3.5/modules/ROOT/pages/download-links.adoc
  xref: xref:3.5@spark-connector::download-links.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/spark-connector/3.5/download-links.html)

# Download and API Reference

> All production-ready Couchbase Spark connector artifacts are downloadable through Maven Central. Prerelease versions are available through our Couchbase Maven repository for easy consumption. The same Couchbase Spark connector library is used for both Scala and PySpark. 

## [](#current-release-3-5-3)Current Release 3.5.3

From its 3.5.0 release, the connector supports both Scala 2.12 and Scala 2.13.

The coordinates for the artifacts are:

Scala 2.12:

* **GroupId:** com.couchbase.client
* **ArtifactId:** spark-connector\_2.12
* **Version:** 3.5.3

Scala 2.13:

* **GroupId:** com.couchbase.client
* **ArtifactId:** spark-connector\_2.13
* **Version:** 3.5.3

## [](#using-from-scala)Using from Scala

If you are using Scala, here is the snippet you can use in your SBT project:

```scala
libraryDependencies += "com.couchbase.client" %% "spark-connector" % "3.5.3"
```

and then follow the [Scala getting started documentation](getting-started.md).

The library package can also be downloaded: [Download (Scala 2.12 / Java)](https://packages.couchbase.com/clients/connectors/spark/3.5.3/Couchbase-Spark-Connector%5F2.12-3.5.3.zip)| [Download (Scala 2.13 / Java)](https://packages.couchbase.com/clients/connectors/spark/3.5.3/Couchbase-Spark-Connector%5F2.13-3.5.3.zip)| [API Reference](https://docs.couchbase.com/sdk-api/couchbase-spark-connector-3.5.3/api/com/couchbase/index.html)

Note that the download also contains an assembled jar, which means they contain all the dependencies in one "fat jar". This means that you don't need to juggle multiple dependencies if you want to use the jar as part of Spark's command line access tools (like the shell) or add it to the classpath of workers.

## [](#using-from-pyspark)Using from PySpark

The same library is used for PySpark.

PySpark users should download the package:

[Download for PySpark](https://packages.couchbase.com/clients/connectors/spark/3.5.3/Couchbase-Spark-Connector%5F2.12-3.5.3.zip)

and then follow the [PySpark documentation](pyspark.md).

## [](#using-from-java-or-other-jvm-languages)Using from Java or Other JVM Languages

The Couchbase Spark connector can also be used in a Java (or Kotlin, Clojure etc.) application. Simply import the library coordinates above into your build of choice (such as Maven or Gradle).